# lmdeploy

./: CMakeLists.txt  pdm_build.py  pyproject.toml  setup.py
.github/workflows/: cuda12.8-whl-release.yml  linux-x64-gpu.yml  test_docker.yml  windows-x64-gpu.yml
autotest/utils/: config_utils.py
docker/: Dockerfile  Dockerfile.jetson  build.sh  build_pytorch_jetson.sh  install.sh  prepare_wheel.sh
lmdeploy/: __init__.py  api.py  logger.py  messages.py  model.py  pipeline.py  tokenizer.py  utils.py
lmdeploy/cli/: serve.py  utils.py
lmdeploy/lite/apis/: calibrate.py
lmdeploy/lite/quantization/: calibration.py
lmdeploy/lite/quantization/weight/: quantizer.py
lmdeploy/lite/utils/: batch_split.py  global_avail.py
lmdeploy/pytorch/: config.py
lmdeploy/pytorch/backends/: base.py
lmdeploy/pytorch/engine/: cache_engine.py  engine_instance.py  logits_process.py  model_agent.py
lmdeploy/pytorch/engine/executor/: __init__.py
lmdeploy/pytorch/engine/model_agent/: __init__.py  agent.py
lmdeploy/pytorch/models/: internvl3_hf.py
lmdeploy/serve/: async_engine.py
lmdeploy/serve/openai/: api_client.py  api_server.py  protocol.py
lmdeploy/serve/parsers/: _openai_harmony.py
lmdeploy/serve/processors/: multimodal.py
lmdeploy/serve/proxy/: proxy.py
lmdeploy/turbomind/: supported_models.py  tokenizer_info.py  turbomind.py
lmdeploy/turbomind/deploy/: config.py  module.py
lmdeploy/vl/: engine.py
lmdeploy/vl/model/: base.py  deepseek.py  deepseek_vl2.py  gemma3_vl.py  interns1_pro.py  internvl.py  internvl3_hf.py  internvl_llava.py  llama4.py  llava.py  llava_hf.py  llava_next.py  minicpmv.py  molmo.py  qwen.py  xcomposer2.py
requirements/: runtime_ascend.txt  runtime_camb.txt  runtime_cuda.txt  runtime_maca.txt
src/turbomind/engine/: request.h
tests/pytorch/kernel/: test_turboquant.py  test_turboquant_fused.py  turboquant_utils.py
tests/pytorch/nn/: test_turboquant_linear.py
tests/test_lmdeploy/: test_pipeline.py
(+90 files in other folders)
