[project]
name = "lmdeploy"
description = "A toolset for compressing, deploying and serving LLM"
authors = [
	{name = "OpenMMLab", email = "openmmlab@gmail.com" },
]
maintainers = [
	{name = "OpenMMLab", email = "openmmlab@gmail.com" },
]
classifiers = [
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Intended Audience :: Developers",
	"Intended Audience :: Education",
	"Intended Audience :: Science/Research",
]
requires-python = ">= 3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "einops",
    "fastapi",
    "fire",
    "mmengine-lite",
    "numpy<2.0.0",
    "openai",
    "partial_json_parser",
    "pillow",
    "protobuf",
    "pydantic>2.0.0",
    "pyzmq",
    "safetensors",
    "sentencepiece",
    "shortuuid",
    "tiktoken",
    "transformers",
    "uvicorn",
]

[project.optional-dependencies]
lite = [
    "accelerate",
    "datasets",
    "transformers-stream-generator"
]
serve = [
    "gradio",
    "prometheus-client",
    "protobuf"
]

[tool.pdm.version]
source = "file"
path = "lmdeploy/version.py"

[tool.pdm.build]
includes = ["lmdeploy/"]
source-includes = [
    "cmake/",
    "requirements/",
    "src/",
    "tests/",
    "CMakeLists.txt",
]
run-setuptools = true

[project.scripts]
lmdeploy = "lmdeploy.cli:run"

[build-system]
requires = [
    "cmake_build_extension",
    "packaging",
    "pdm-backend",
    "pybind11<=3.11.1",
]
build-backend = "pdm.backend"


[dependency-groups]
test = [
    "allure-pytest",
    "coverage",
    "nvidia-ml-py",
    "pytest",
    "pytest-assume",
    "pytest-cov",
    "pytest-order",
    "pytest-rerunfailures",
    "pytest-sugar",
    "pytest-xdist",
    "pyyaml",
]
